Adição dos meus filmes favoritos

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         <img src="https://images.justwatch.com/poster/312913031/s718/homem-aranha-longe-de-casa.jpg" alt="Homem Aranha Longe de Casa">
         <h2>Homem Aranha: Longe de Casa</h2>
         <button>Ver agora</button>
+        <img src="https://play-lh.googleusercontent.com/JQKfopRtWqyD1cUXjx4V00qLnKecgKlSTS6sL0YX1T0H4bzyOK8SxdQIUbZ6NTsKfkBm" alt="Como Eu Era Antes de Você">
+        <h2>Como Eu Era Antes de Você</h2>
+        <button>Ver agora</button>
+        <img src="https://m.media-amazon.com/images/S/pv-target-images/abffd259caca46fc8b5531ac9bb62c57ea6bd9a9d887372869877ac7063b8ee8.jpg" alt="Barbie Moda e Magia">
+        <h2>Barbie Moda e Magia</h2>
+        <button>Ver agora</button>
+        <img src="https://images.justwatch.com/poster/311755979/s718/um-lugar-silencioso-2.jpg" alt="Um Lugar Silencioso PARTE II">
+        <h2>Um Lugar Silencioso PARTE II</h2>
+        <button>Ver agora</button>
     </div>
 
  </main>
