adição do sass no código.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <!-- Header -->
     <header>
-        <h2>VNW FLIX</h2>
+        <h2 class="titulo">VNW FLIX</h2>
     </header>
 
 <!-- Conteudo principal -->
